Feat: Add registration and score

--- a/skusobny2/src/app/form-component/form-component.component.html
+++ b/skusobny2/src/app/form-component/form-component.component.html
@@ -1,6 +1,6 @@
 
 <div>
-    <div class="form-component" *ngIf="userHandler === ''" [hidden]="userHandler === '' ? false : true ">
+    <div class="form-component" *ngIf="userHandler === 'login'" [hidden]="userHandler === 'login' ? false : true ">
         <h1 class="form-title"> Login</h1>
       <form [formGroup]="formLogin"  #login > 
         <div class="form-section">
@@ -12,12 +12,31 @@
             <input class="input-field" type="password"  name="password" required formControlName="password">
             <label class="input-label" for="password">Heslo</label>
         </div>
-        <button  class="submit-btn" (click)="doLogin()"> Prihlásiť </button>
+        <button  class="submit-btn btnPrihlasit" (click)="doLogin()"> Prihlásiť </button>
+        <button  class="submit-btn" (click)="showRegForm()"> Registrovať </button>
       </form>
     </div>
 
-    <div class="form-component" *ngIf="userHandler !== ''" [hidden]="userHandler !== '' ? false : true">
+    <div class="form-component" *ngIf="userHandler === 'register'" [hidden]="userHandler === 'register' ? false : true ">
+      <h1 class="form-title"> Registrovať </h1>
+      <form [formGroup]="formRegister"  #login > 
+      <div class="form-section">
+         
+          <input class="input-field" type="text"  name="email"  required autofocus formControlName="userName" >
+          <label  class="input-label" for="email">E-mail</label>
+      </div> 
+      <div class="form-section">
+          <input class="input-field" type="password"  name="password" required formControlName="password">
+          <label class="input-label" for="password">Heslo</label>
+      </div>
+      <button  class="submit-btn" (click)="doRegister()"> Registrovať </button>
+     </form>
+    </div>
+
+    <div class="form-component" *ngIf="userHandler === 'profil'" [hidden]="userHandler === 'profil' ? false : true">
       <h1 class="form-title"> Profil</h1>
+      <p style="color: var(--primaryColor);">Username: {{responseUser.username }}</p>
+      <p style="color: var(--primaryColor);">SCORE: {{responseUser.score}}</p>
       <form > 
         <button  class="submit-btn" (click)="doLogOut()"> Odhlasit </button>
       </form>
