--- a/skusobny2/src/app/launch/launch.component.html
+++ b/skusobny2/src/app/launch/launch.component.html
@@ -5,8 +5,7 @@
 </div>
 <div class="Score">
   <p class="vypis">{{text}}</p>
-<p>Score</p>
-<p>{{ myInt }}</p>
+<p class="ScoreMain">Score:   {{ myInt }}</p>
 </div>
 <app-table [data]="this.cards2"></app-table>
 </div>
