--- a/skusobny2/src/app/launch/launch.component.scss
+++ b/skusobny2/src/app/launch/launch.component.scss
@@ -2,9 +2,7 @@
     display: grid;
     grid-template-columns: repeat(5, 150px);
     gap: 16px;
-
     justify-content: center;
-
     width: calc(100% - 5rem);
     margin-left: 5rem;
     z-index: 0;
@@ -34,13 +32,16 @@ height:0px;
     }
 }
 
-
 .Score {
     width: calc(100% - 5rem);
     margin-left: 5rem;
 }
 
-.row[_ngcontent-bld-c19]  {  //prečo nejde s app-root?
+.ScoreMain {
+font-size: 30px;
+}
+
+.row[_ngcontent-bld-c19]  {  
     width: calc(100% - 5rem);
     margin-left: 5rem;
 }
@@ -49,11 +50,3 @@ height:0px;
     font-size: 35px;
 }
 
-/*.wrapper {
-   // height:100vh; //keby 100rem, prečo sa deje?
-   height: 100%;
-   display: flex;
-   flex-direction: column;
-   align-self: center;
-}
-*/
