--- a/skusobny2/src/app/app.component.scss
+++ b/skusobny2/src/app/app.component.scss
@@ -35,18 +35,11 @@
     margin-left: 5rem;
 }
 
-.row[_ngcontent-bld-c19]  {  //prečo nejde s app-root?
+.row[_ngcontent-bld-c19]  {  
     width: calc(100% - 5rem);
     margin-left: 5rem;
 }
 
-/*.wrapper {
-   // height:100vh; //keby 100rem, prečo sa deje?
-   height: 100%;
-   display: flex;
-   flex-direction: column;
-   align-self: center;
-}
-*/
+
 
 
