--- a/skusobny2/src/app/card-basic/card-basic.component.scss
+++ b/skusobny2/src/app/card-basic/card-basic.component.scss
@@ -1,24 +1,26 @@
 .card-component{
-
     display: inline-block;
     margin-left: 40px;
     margin-right: 40px;
-    margin-top: 50px;
+    margin-top: 30px;
     background-color: var(--secondaryColor);
-    border-radius: 15px;
-    
+    border-radius: 12px;
+    border-style: solid;
+  border-color: #003249;
 }
 .card-component img {
-    width: 320px;
-    height: 320px;
-    border-radius: 8px;
+    width: 230px;
+    height: 230px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+    border-bottom: 0px;
     
 }
 .card-text{
     text-align: center;
     font-size: 24px;
     margin-top: 10px;;
-    color: var(--primaryColor);
+    color: white;
 } 
 .card-component:hover {
     -webkit-box-shadow: 0px 0px 36px 5px rgba(0,0,0,0.66);
@@ -26,3 +28,34 @@
     box-shadow: 0px 0px 36px 5px rgba(0,0,0,0.66);
     transform: scale(1.1);
 }
+@media only screen and (min-width: 992px) {
+    .card-component img {
+        width: 230px;
+        height: 230px;
+       
+        
+    }
+}
+
+@media only screen and (min-width: 800px) {
+    .card-component img {
+        width: 190px;
+        height: 190px;
+       
+        
+    }
+}
+
+@media only screen and (min-width: 1800px) {
+    .card-component img {
+        width: 350px;
+        height: 350px;
+        
+        
+    }
+    .card-component{
+        margin-top: 40px;
+    }
+
+}
+
