fix: refresh and stay login.

--- a/skusobny2/src/app/form-component/form-component.component.html
+++ b/skusobny2/src/app/form-component/form-component.component.html
@@ -4,7 +4,6 @@
         <h1 class="form-title"> Login</h1>
       <form [formGroup]="formLogin"  #login > 
         <div class="form-section">
-           
             <input class="input-field" type="text"  name="email"  required autofocus formControlName="userName" >
             <label  class="input-label" for="email">E-mail</label>
         </div> 
@@ -13,7 +12,7 @@
             <label class="input-label" for="password">Heslo</label>
         </div>
         <button  class="submit-btn btnPrihlasit" (click)="doLogin()"> Prihlásiť </button>
-        <button  class="submit-btn" (click)="showRegForm()"> Registrovať </button>
+        <button  class="submit-btn" (click)="showForm('Register')"> Registrovať </button>
       </form>
     </div>
 
@@ -21,15 +20,15 @@
       <h1 class="form-title"> Registrovať </h1>
       <form [formGroup]="formRegister"  #login > 
       <div class="form-section">
-         
-          <input class="input-field" type="text"  name="email"  required autofocus formControlName="userName" >
+          <input class="input-field" type="text"  name="email"  required autofocus formControlName="userName"  >
           <label  class="input-label" for="email">E-mail</label>
       </div> 
       <div class="form-section">
           <input class="input-field" type="password"  name="password" required formControlName="password">
           <label class="input-label" for="password">Heslo</label>
       </div>
-      <button  class="submit-btn" (click)="doRegister()"> Registrovať </button>
+      <span class="submit-btn btnPrihlasit" (click)="showForm('Login')">Späť</span>
+      <button  class="submit-btn" (click)="doRegister()"> Urob registráciu </button>
      </form>
     </div>
 
