--- a/skusobny2/src/app/my-dict/my-dict.component.html
+++ b/skusobny2/src/app/my-dict/my-dict.component.html
@@ -1,3 +1,4 @@
+<h1 class="card-title">Slovniky</h1>
 <div class="wrapper">
 <div class="wrapper2" >
        <table id="users" *ngFor="let item of arrays;let idx=index">
