--- a/skusobny2/src/app/form-component/form-component.component.html
+++ b/skusobny2/src/app/form-component/form-component.component.html
@@ -1,7 +1,7 @@
 
 <div>
     <div class="form-component" *ngIf="userHandler === 'login'" [hidden]="userHandler === 'login' ? false : true ">
-        <h1 class="form-title"> Login</h1>
+        <h1 class="form-title" style="color: aliceblue;"> Login</h1>
       <form [formGroup]="formLogin"  #login > 
         <div class="form-section">
             <input class="input-field" type="text"  name="email"  required autofocus formControlName="userName" >
@@ -17,7 +17,7 @@
     </div>
 
     <div class="form-component" *ngIf="userHandler === 'register'" [hidden]="userHandler === 'register' ? false : true ">
-      <h1 class="form-title"> Registrovať </h1>
+      <h1 class="form-title" style="color: aliceblue;"> Registrovať </h1>
       <form [formGroup]="formRegister"  #login > 
       <div class="form-section">
           <input class="input-field" type="text"  name="email"  required autofocus formControlName="userName"  >
@@ -33,9 +33,9 @@
     </div>
 
     <div class="form-component" *ngIf="userHandler === 'profil'" [hidden]="userHandler === 'profil' ? false : true">
-      <h1 class="form-title"> Profil</h1>
-      <p style="color: var(--primaryColor);">Username: {{responseUser.username }}</p>
-      <p style="color: var(--primaryColor);">SCORE: {{responseUser.score}}</p>
+      <h1 class="form-title"  style="color: aliceblue;"> Profil</h1>
+      <p  style="color: aliceblue;">Username: {{responseUser.username }}</p>
+      <p  style="color: aliceblue;">SCORE: {{responseUser.score}}</p>
       <form > 
         <button  class="submit-btn" (click)="doLogOut()"> Odhlasit </button>
       </form>
