--- a/skusobny2/src/app/form-component/form-component.component.html
+++ b/skusobny2/src/app/form-component/form-component.component.html
@@ -1,7 +1,7 @@
 
 <div>
     <div class="form-component" *ngIf="userHandler === 'login'" [hidden]="userHandler === 'login' ? false : true ">
-        <h1 class="form-title" style="color: aliceblue;"> Login</h1>
+        <h1 class="form-title" style="color: aliceblue;"> Prihlásenie</h1>
       <form [formGroup]="formLogin"  #login > 
         <div class="form-section">
             <input class="input-field" type="text"  name="email"  required autofocus formControlName="userName" >
