--- a/skusobny2/src/app/dashboard/dashboard.component.scss
+++ b/skusobny2/src/app/dashboard/dashboard.component.scss
@@ -9,10 +9,13 @@
     background-color: var(--primaryColor);
     padding: 15px;
 }
-
-
 .menu {
     width: calc(100% - 5rem);
     margin-left: 5rem;
 }
+// @media only screen and (min-width: 800px) {
+//     .card-selection {
+//         display: inline-flex;
+//     }
+// } for small display...
 
