--- a/skusobny2/src/app/dashboard/dashboard.component.scss
+++ b/skusobny2/src/app/dashboard/dashboard.component.scss
@@ -8,6 +8,7 @@
     font-size: 48px;
     background-color: var(--primaryColor);
     padding: 15px;
+    margin: 0;
 }
 .menu {
     width: calc(100% - 5rem);
