--- a/skusobny2/src/app/card-basic/card-basic.component.scss
+++ b/skusobny2/src/app/card-basic/card-basic.component.scss
@@ -35,10 +35,17 @@
     }
 }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (min-height: 500px) {
     .card-component img {
-        width: 175px;
-        height: 170px;
+        width: 204px;
+        height: 130px;
+    }
+}
+
+@media only screen and (min-height: 600px) {
+    .card-component img {
+        width: 203px;
+        height: 183px;
     }
 }
 
